[package]
name = "hitbtc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "API for working with HitBTC cryptocurrency exchange"
keywords = ["cryptocurrency", "trading", "hitbtc"]
edition = "2018"

[dependencies]
bigdecimal = { version = "*", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
failure = "*"
futures-preview = "0.3.0-alpha"
headers = "*"
http = "*"
log = "*"
maplit = "*"
reqwest = { version = "0.10.0-alpha", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_urlencoded = "0.6"
uuid = { version = "*", features = ["serde"] }
